Fix capitalization and branding inconsistencies in index.html

--- a/prdistribution/index.html
+++ b/prdistribution/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>PrbyEAMEDIA</title>
+  <title>PR by eamedia</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -56,7 +56,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span>
-                Pr by EAMEDIA
+                PR by EAMEDIA
               </span>
             </a>
 
@@ -196,16 +196,16 @@
               firm or an individual striving to raise awareness. That’s why we’ve created an innovative solution
               designed to simplify the process and enhance your online presence.
 
-              At prbyEAmedia, we’ve earned a strong reputation for consistently delivering compelling, engaging, and
+              At PR by eamedia, we’ve earned a strong reputation for consistently delivering compelling, engaging, and
               timely news stories to audiences worldwide. We’ve leveraged our expertise to build a platform that not
               only supports PR firms but also serves anyone looking to amplify their message.
 
-              By choosing prbyEAmedia, you can save time, money, and resources typically spent on traditional pitching
+              By choosing PR by eamedia, you can save time, money, and resources typically spent on traditional pitching
               methods. Instead, you’ll enjoy guaranteed publication on some of the most prominent news sites across a
               variety of media channels, ensuring your message reaches its target audience with speed and impact.
 
               We take pride in offering a powerful platform for your communication needs, and we’re eager to help you
-              elevate your online presence. Trust prbyEAmedia as your go-to solution for press distribution and
+              elevate your online presence. Trust PR by eamedia as your go-to solution for press distribution and
               experience the difference that our professional and confident approach can make for you.
             </p>
             <a href="">
@@ -254,7 +254,8 @@
                 Expert Storytelling
               </h5>
               <p>
-                At prbyEAmedia, we excel in crafting stories that captivate and engage your target audience. Our team of
+                At PR by eamedia, we excel in crafting stories that captivate and engage your target audience. Our team
+                of
                 seasoned professionals ensures that your message is delivered with precision and impact.
               </p>
             </div>
@@ -275,7 +276,7 @@
                 Guaranteed Coverage
               </h5>
               <p>
-                With prbyEAmedia, you can bypass the uncertainty of traditional pitching. We offer guaranteed
+                With PR by eamedia, you can bypass the uncertainty of traditional pitching. We offer guaranteed
                 publication across some of the most influential news sites, ensuring your story reaches the right
                 audience swiftly.
               </p>
@@ -566,7 +567,7 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayDateYear"></span> All Rights Reserved PrbyEAMEDIA
+        &copy; <span id="displayDateYear"></span> All Rights Reserved PR by eamedia
       </p>
     </div>
   </footer>
