--- a/prdistribution/index.html
+++ b/prdistribution/index.html
@@ -116,6 +116,12 @@
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
           <li class="nav-item">
+            <a class="nav-link" href="/">
+              <i class="fas fa-home fs-5"></i>
+            </a>
+          </li>
+
+          <li class="nav-item">
             <a class="nav-link" href="../login/">
               <i class="fas fa-user-circle fs-5"></i>
             </a>
