--- a/prdistribution/index.html
+++ b/prdistribution/index.html
@@ -139,7 +139,7 @@
           <h1 class="display-4 fw-bold mb-4">Amplify Your Voice with Strategic Press Release Distribution</h1>
           <p class="lead mb-5">Reach millions through Africa's premier distribution network spanning TV, radio, print,
             and digital media.</p>
-          <a href="#" class="btn btn-light btn-lg px-5 py-3">Submit Press Release →</a>
+          <a href="#" class="btn btn-light btn-lg px-5 py-3">Login to Submit Press Release →</a>
         </div>
         <div class="col-lg-6 mt-5 mt-lg-0">
           <img src="images/media-network.png" alt="Media Network" class="img-fluid rounded-3">
